--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,20 @@
 plugins {
-    id 'java-library' // используем язык Java
+    id 'java-library'
 }
 
 repositories {
-    mavenCentral() // используем Selenide c mvnrepository.com
+    mavenCentral()
 }
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.19.1",  // здесь обычно последняя версия библиотеки Selenide c https://mvnrepository.com/artifact/com.codeborne/selenide
-                                              // github.com/selenide/selenide — тут лежит сам Selenide
-            "org.junit.jupiter:junit-jupiter:5.10.0", // подключаем JUnit — тестовый фреймворк
-                                                      // обращать внимание, что поключалась вся JUnit, а не часть
-            'org.slf4j:slf4j-simple:2.0.7' // что-то для логов
+            "com.codeborne:selenide:6.19.1",
+            'com.github.javafaker:javafaker:1.0.2',
+            "org.junit.jupiter:junit-jupiter:5.10.0",
+            'org.slf4j:slf4j-simple:2.0.7'
     )
 }
 
 test {
-    useJUnitPlatform() // интеграция IJ Idea ядром JUnit — появится возможность запускать тесты прямо в IJ Idea (зелёная кнопка)
+    useJUnitPlatform()
 }
